<resources>
    <string name="app_name">Radius</string>
    <string name="title_map">Map</string>
    <string name="title_venues">Venues</string>
    <string name="hint_address">Address</string>
    <string name="address_dialog_title">Set your home base!</string>
    <string name="preference_file_key">com.ryanschoen.radius.preferences_file</string>
    <string name="address_of_home_base">Address of home base</string>
    <string name="save_address">Save Address</string>
    <string name="title_setup">Setup</string>
    <string name="city">City</string>
    <string name="verification_not_started">Enter your home base address to verify</string>
    <string name="verification_processing">Verifying address…</string>
    <string name="verification_failed">Could not verify your address. Double check to make sure it\'s correct!</string>
    <string name="venue_search_not_started">Verify your home base to download venues</string>
    <string name="venue_search_processing">Downloading venues…</string>
    <string name="venue_search_failed">Could not find any nearby venues. Double check your address!</string>
    <string name="saved_latitude">saved_latitude</string>
    <string name="saved_longitude">saved_longitude</string>
    <string name="clear_data">[DEBUG] Clear data and quit</string>
    <string name="change_home_base">Change home base</string>
    <string name="search_for_address">Search for an address</string>
    <string-array name="states_names">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="states_abbreviations">
        <item>State</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>