<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.ryanschoen.radius.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_setup"
            app:destination="@id/navigation_setup" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_venues"
            app:destination="@id/navigation_venues" />
    </fragment>

    <fragment
        android:id="@+id/navigation_venues"
        android:name="com.ryanschoen.radius.ui.venues.VenuesFragment"
        android:label="@string/title_venues"
        tools:layout="@layout/fragment_venues" >
        <action
            android:id="@+id/action_navigation_venues_to_navigation_setup"
            app:destination="@id/navigation_setup" />
        <argument
            android:name="venueId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setup"
        android:name="com.ryanschoen.radius.ui.setup.SetupFragment"
        android:label="@string/title_setup"
        tools:layout="@layout/fragment_setup" >
        <action
            android:id="@+id/action_navigation_setup_to_navigation_map"
            app:destination="@id/navigation_map"
            app:popUpTo="@id/navigation_map" />
        <argument
            android:name="isAddressAlreadySet"
            app:argType="boolean" />
    </fragment>
</navigation>