<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="117dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.setup.SetupFragment">

            <EditText
                android:id="@+id/address_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/margin_normal"
                android:autofillHints="postalAddress"
                android:hint="@string/address_of_home_base"
                android:text="1600 Amphitheatre Parkway"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/city_edittext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:autofillHints="addressLocality"
                android:hint="@string/city"
                android:text="Mountain View"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toStartOf="@id/state_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_edittext" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city_edittext"
                app:layout_constraintTop_toBottomOf="@id/address_edittext" />

            <Button
                android:id="@+id/save_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:enabled="false"
                android:text="@string/save_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_edittext"
                tools:enabled="true" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_address"
                app:srcCompat="@drawable/baseline_pending_36" />



            <TextView
                android:id="@+id/address_verification_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="Set address to begin verification"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:progress="00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:progress="30" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>

